--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
             text-align: center;
     
         }
+        p{
+            color: blue;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <H1>Site da Larissa</H1>
+    <p>site vazio porque voçe não me passou nenhuma informação de como voçe quer esse site.</p>
     
 </body>
 </html>
